<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linear_all"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/transparent"
              android:gravity="center_horizontal|center_vertical"
              >
            <RelativeLayout
                android:layout_width="250dp"
                android:layout_height="130dp"
                android:background="@color/color_ffffff"
                android:paddingBottom="@dimen/size_dp_8"
                >
                <TextView
                    android:id="@+id/title"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/size_dp_44"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/dialog_title"
                    style="@style/main_text_343434_18sp"
                    android:layout_marginBottom="@dimen/size_dp_5"
                    android:visibility="visible" />
                <LinearLayout
                    android:id="@+id/dialog_img_two_rel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentBottom="true"
                    >
                    <TextView
                        android:id="@+id/dialog_one_button"
                        android:layout_width="1dp"
                        android:layout_weight="1"
                        android:layout_height="@dimen/size_dp_40"
                        android:gravity="center_vertical|center_horizontal"
                        style="@style/main_text_ffffff_16sp"
                        android:background="@color/color_00a8ff"
                        android:text="@string/confirm"
                        />
                    <TextView
                        android:layout_width="0.5dp"
                        android:layout_height="@dimen/size_dp_40"
                        android:background="@color/color_dbdbdb"
                        ></TextView>

                    <TextView
                        android:id="@+id/dialog_two_button"
                        android:layout_width="1dp"
                        android:layout_weight="1"
                        android:layout_height="@dimen/size_dp_40"
                        android:layout_alignParentBottom="true"
                        android:gravity="center_vertical|center_horizontal"
                        style="@style/main_text_ffffff_16sp"
                        android:background="@color/color_00a8ff"
                        android:text="@string/cancel"
                        />
                    <TextView
                        android:layout_width="0.5dp"
                        android:layout_height="@dimen/size_dp_40"
                        android:background="@color/color_dbdbdb"
                        ></TextView>

                    <TextView
                        android:id="@+id/dialog_three_button"
                        android:layout_width="1dp"
                        android:layout_weight="1"
                        android:layout_height="@dimen/size_dp_40"
                        android:layout_alignParentBottom="true"
                        android:gravity="center_vertical|center_horizontal"
                        style="@style/main_text_ffffff_16sp"
                        android:background="@color/color_00a8ff"
                        android:text="@string/cancel"
                        />
                </LinearLayout>
            </RelativeLayout>
</LinearLayout>
