<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/color_fcfcfc"
    android:layout_gravity="center"
    android:orientation="vertical" >
	<View 
	    android:id="@+id/view_line"
	    android:layout_width="fill_parent"
	    android:layout_height="0.5dp"
	    android:layout_below="@+id/linear_apply_conent"
	    android:background="@color/color_dbdbdb"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_record"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_home_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                 >
                <ImageView
                    android:id="@+id/img_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tab_record_h" />
                <TextView
                    android:id="@+id/tv_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record"
                    android:gravity="center_horizontal"
                    android:textColor="@color/color_6D7BFC"
                    android:layout_below="@id/img_record"
                    android:textSize="12sp" />
            </LinearLayout>
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" 
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_find_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                 >
                <ImageView
                    android:id="@+id/img_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:scaleType="matrix"
                    android:src="@drawable/tab_play_h" />
                <TextView
                    android:id="@+id/tv_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/img_play"
                    android:textColor="@color/color_363636"
                    android:textSize="12sp" />
            </LinearLayout>
 			
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tool"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/ll_tool_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_tool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:scaleType="matrix"
                    android:src="@drawable/tab_tool_h" />

                <TextView
                    android:id="@+id/tv_tool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tool"
                    android:textColor="@color/color_363636"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_set"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/ll_me_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_set"
                   android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:scaleType="matrix"
                    android:src="@drawable/tab_setting_h" />

                <TextView
                    android:id="@+id/tv_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set"
                    android:textColor="@color/color_363636"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>